# ModernRoboticsCPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  vcpkg.json
Modern_Robotics/: FarwardKinematics.py  InverseKinemetics.py  Jacobian.py  Tools.py  main.py
arm_7dof/src/robot_commander_python/: setup.cfg  setup.py
arm_7dof/src/robot_commander_python/robot_commander_python/: jacobian.py  modern_robotics_tools.py  robot_commander.py  trash.py
arm_7dof/src/robot_model/: CMakeLists.txt
arm_7dof/src/robot_model/config/controllers/: robot_controller.yaml
arm_7dof/src/robot_model/config/rviz/: robot.rviz
arm_7dof/src/robot_model/launch/: robot_launch.xml  robot_launch_gazebo.xml  robot_launch_rviz.xml
arm_7dof/src/robot_model/urdf/: robot.ros2_control.xacro  robot.urdf.xacro  robot_gazebo.xacro  robot_inertia.xacro  robot_main.xacro  robot_utils.xacro
docs/: Doxyfile  api-manual.md  user-manual.md
include/DallE/: dynamics.h  fk.h  ik.h  inverse_dynamics.h  motion_planning.h  robot_control.h  tools.h  trajectory.h
include/my_modern_robotics/: dynamics.h  fk.h  ik.h  inverse_dynamics.h  motion_planning.h  robot_control.h  tools.h  trajectory.h
quadruped/src/robot_commander_python/: setup.py
quadruped/src/robot_commander_python/robot_commander_python/: forward_kinematics.py  trash.py
quadruped/src/robot_model/config/controllers/: robot_control.yaml
quadruped/src/robot_model/config/rviz/: robot.rviz
quadruped/src/robot_model/launch/: robot_launch.xml  robot_launch_gazebo.xml  robot_launch_rviz.xml
quadruped/src/robot_model/urdf/: gazebo_classic.xacro  leg.xacro  robot.xacro  ros2_control.xacro
src/: dynamics.cpp  fk.cpp  ik.cpp  inverse_dynamics.cpp  motion_planning.cpp  robot_control.cpp  tools.cpp  trajectory.cpp
tests/: api_smoke_test.cpp  dynamics_test.cpp  fk_test.cpp  ik_test.cpp  inverse_dynamics_test.cpp  motion_planning_test.cpp  robot_control_test.cpp  tools_basic_test.cpp  tools_jacobian_test.cpp  tools_transform_test.cpp  trajectory_test.cpp
xarm7/src/robot_commander_python/: package.xml  setup.py
xarm7/src/robot_commander_python/robot_commander_python/: inverse_kinematics.py  trash.py
xarm7/src/robot_model/: CMakeLists.txt  package.xml
xarm7/src/robot_model/config/controllers/: robot_controller.yaml
xarm7/src/robot_model/config/rviz/: robot.rviz
xarm7/src/robot_model/launch/: robot_launch.xml  robot_launch_gazebo.xml  robot_launch_rviz.xml
xarm7/src/robot_model/urdf/xArm7/: common.link.xacro  common.material.xacro  xArm7.gazebo.xacro  xArm7.ros2_control.xacro  xArm7.urdf.xacro  xArm7_main.xacro  xArm7_robot.urdf.xacro  xArm_device_macro.xacro
